--- a/src/main/CmakeLists.txt
+++ b/src/main/CmakeLists.txt
@@ -4,8 +4,10 @@ project(AmaterasuMain)
 include_directories("./")
 include_directories("../")
 include_directories("../../3dparty/SDL/include")
+include_directories("../../3dparty/omni_types/src")
 
 file(GLOB_RECURSE MAIN-SRC *.cpp)
 
 add_executable(Amaterasu ${MAIN-SRC})
 target_link_libraries(Amaterasu SDL3::SDL3)
+target_link_libraries(Amaterasu omni_types)
