--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "3dparty/imgui"]
 	path = 3dparty/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "3dparty/stb"]
+	path = 3dparty/stb
+	url = https://github.com/nothings/stb.git
